--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -30,4 +30,21 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+
+.logo {
+  height: 80px;
+  width: 80px;
+}
+
+.electriCasa {
+  font-size: 70px;
+  font-family: Railway;
+}
+
+ul {
+  font-size: 30px;
+  color: black;
+  background-color: grey;
 }
