--- a/src/RegisterLoginContainer/RegisterLoginContainer.css
+++ b/src/RegisterLoginContainer/RegisterLoginContainer.css
@@ -5,10 +5,15 @@
 
 .regLog {
   /* border: 1px solid; */
-  width: 100%;
-  height: 600px;
-  background-size: 100% 100%;
+  /* width: 100%; */
+  height: auto;
+  /* backgr ound-size: 100% 100%; */
   /* background-image: url(./pic3.jpg), linear-gradient(white, yellow); */
+  background-image: url(./pic3.jpg);
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   background-color: #A6D5AE;
 }
 
