--- a/src/HomeContainer/Home.css
+++ b/src/HomeContainer/Home.css
@@ -31,6 +31,7 @@
   margin-bottom: 5%;
   width: 60%;
   /* border: 5px solid green; */
+  /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
 }
 
 .house {
