--- a/src/Nav/Nav.css
+++ b/src/Nav/Nav.css
@@ -1,13 +1,14 @@
 .nav {
   font-size: 20px;
   color: white;
-  margin: 0;
+  margin-top: 50px;
   padding-top: 1%;
   padding-bottom: 1%;
   padding-right: 5%;
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .true {
@@ -27,8 +28,8 @@
   color: white;
   margin-right: 40px;
   border-style: none;
-  border: 1px solid;
-  padding: 1%;
+  /* border: 1px solid; */
+  padding: 4px;
 }
 
 
