--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
 * {
   font-family: 'Lato', sans-serif;
 }
+
+
+::placeholder {
+  /* color: #2E8B56; */
+  font-size: 13px;
+  align-items: center;
+}
