--- a/src/CreateContainer/Create.css
+++ b/src/CreateContainer/Create.css
@@ -12,15 +12,18 @@
   margin-bottom: 10px;
   font-size: 20px;
   outline: none;
-  width: 360px;
-  border: 1px solid #2E8B56;
-  color: #2E8B56;
+  width: 58%;
+  /* border: 1px solid #2E8B56;
+  color: #2E8B56; */
+  border: 1px solid grey;
+  color: grey;
   display: grid;
-  grid-template-columns: auto;
+  /* grid-template-columns: auto; */
+  border-radius: 5px;
 }
 
 .select {
-  margin-left: 35%;
+  margin-left: 42%;
 }
 
 input[type=file] {
@@ -28,6 +31,7 @@ input[type=file] {
   width: 180px;
   height: 34px;
   overflow: hidden;
+  /* border-radius: 2%; */
 }
 
 input[type=file]:before {
@@ -38,24 +42,31 @@ input[type=file]:before {
   content: 'Select your photos';
   display: inline-block;
   background: white;
-  border: 1px solid #2E8B56;
-  color: #2E8B56;
+  /* border: 1px solid #2E8B56;
+  color: #2E8B56; */
+  border: 1px solid grey;
+  color: grey;
   padding: 0 10px;
   text-align: center;
   font-family: Helvetica, Arial, sans-serif;
+  /* border-radius: 20%; */
+
 }
 
 input[type=file]::-webkit-file-upload-button {
   visibility: hidden;
+  /* border-radius: 70%; */
 }
 
 .container-form-group {
-  margin-left: 10%;
+  margin-top: 8%;
+  margin-left: 28%;
   /* border: 1px solid red; */
 }
 
 .frames {
-  border: 1px solid #2E8B56;
+  border: 1px dashed grey;
+  background-image: url(./house.jpg);
 }
 
 .submitBtn {
@@ -74,10 +85,23 @@ input[type=file]::-webkit-file-upload-button {
   color: white;
 }
 
-.createContainer, .container-photos {
+.createContainer {
   margin-top: 3%;
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: auto;
+}
+
+
+.container-photos {
+  width: 40%;
+  margin-top: 3%;
+  margin-left: 30%;
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+}
+
+#attach {
+
 }
 
 .createContainer {
@@ -90,7 +114,8 @@ input[type=file]::-webkit-file-upload-button {
 }
 
 .container-submitBtn {
-  margin-left: 150px;
+  margin-top: 4%;
+  margin-left: 42%;
   /* border: 6px solid grey; */
 
 }
