--- a/src/CreateContainer/Create.css
+++ b/src/CreateContainer/Create.css
@@ -66,7 +66,11 @@ input[type=file]::-webkit-file-upload-button {
 
 .frames {
   border: 1px dashed grey;
-  background-image: url(./house.jpg);
+  background-image: url(./picture.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 40%;
+
 }
 
 .submitBtn {
