--- a/src/MyHouseComponenet/MyHouseComponenet.css
+++ b/src/MyHouseComponenet/MyHouseComponenet.css
@@ -11,52 +11,71 @@
 
 
 .grid {
-  display: inline-grid;
-  grid-template-columns: auto auto;
-  grid-column-gap: 10px;
+  display: grid;
+  grid-template-columns: auto auto auto;
 }
 
 .editDelete {
   /* border: 1px solid blue; */
-  margin-top: 10px;
-  height: 6%;
+  margin-top: 30px;
+  margin-bottom: 8px;
+  width: 100%;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
+  font-size: 18px;
+
+}
+
+.rightBtnborder {
+  border-style: none;
+  font-size: 18px;
 }
 
 .oneHouse {
-  /* border: 1px solid; */
-  width: 380px;
-  height: 520px;
-  margin-right: 4%;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border: 1px solid;
+  width: 280px;
+  height: 500px;
+  /* margin-right: 4%; */
+  /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
 }
 
 
 .top {
-  margin: 30px;
+  margin-left: 30px;
+  margin-top: 30px;
+}
+
+.home-status {
+  padding-bottom: 28px;
 }
 
 .mainPhoto {
-  width: 310px;
-  height: 300px;
+  width: 220px;
+  height: 220px;
   border: 1px solid black;
-  margin: 0px 3px 1px 3px;
 }
 
+.home-status {
+  text-align: center;
+  font-size: 20px;
+  margin-bottom: 4px;
+}
 
+#status-t, #status-f {
+  text-transform: capitalize;
+}
 
 #createBtn {
   /* border: 2px solid blue; */
-  width: 100px;
-  margin-left: 35%;
-  margin-top: 52%;
+  width: 70px;
+  margin-left: 40%;
+  margin-top: 75%;
 }
 
 
 
 .create {
-  width: 360px;
+  width: 280px;
   height: 500px;
 }
 
@@ -66,23 +85,14 @@
 }
 
 .summary {
+  margin-top: 20px;
   padding-left: 10%;
   padding-right: 10%;
 }
 
-#editpen {
-  /* border: 1px green solid; */
-  height: 26px;
-  margin-top: 3px;
-  margin-right: 8px;
-}
 
-
-.rightBtnborder {
-  border: none;
-}
 
 #deletepic {
   border: none;
-    width: 30px;
+  width: 30px;
 }
