--- a/src/MyAccountContainer/MyAccount.css
+++ b/src/MyAccountContainer/MyAccount.css
@@ -23,3 +23,36 @@
   background-color: #2E8B56;
   color: white;
 }
+
+
+@media only screen and (max-width: 600px) {
+
+
+  .editmyinfo {
+    width: 85%;
+    margin-left: 20%;
+  }
+
+  .form {
+    margin-top: 8%;
+  }
+
+  .editBtn {
+    border: 2px solid #2E8B56;
+    color: #2E8B56;
+    width: 150px;
+    border-radius: 45px;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    font-size: 20px;
+    margin-top: 3%;
+    margin-left: 10%;
+  }
+
+  .editBtn:hover {
+    background-color: #2E8B56;
+    color: white;
+  }
+
+
+}
