--- a/src/MyHouseComponenet/MyHouseComponenet.css
+++ b/src/MyHouseComponenet/MyHouseComponenet.css
@@ -96,3 +96,48 @@
   border: none;
   width: 30px;
 }
+
+
+.rightBtnborder {
+  background-color: #2E8B56;
+  /* background-color: #64A466; */
+  border: 1px solid #2E8B56;
+  /* color: #2E8B56; */
+  color: white;
+  width: 60px;
+  height: 23px;
+  border-radius: 45px;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  padding-left: 6%;
+  padding-right: 6%;
+  font-size: 14px;
+  /* margin-top: 2%; */
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.rightBtnborder:hover {
+  background-color: #64A466;
+  color: white;
+}
+
+.seeLink, .editLink {
+  background-color: #2E8B56;
+  /* background-color: #64A466; */
+  border: 1px solid #2E8B56;
+  height: 21px;
+  /* color: #2E8B56; */
+  color: white;
+  width: 8%;
+  border-radius: 45px;
+  padding-left: 6%;
+  padding-right: 6%;
+  font-size: 14px;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.linkFont {
+  color: white;
+}
