--- a/src/MyHouseComponenet/MyHouseComponenet.css
+++ b/src/MyHouseComponenet/MyHouseComponenet.css
@@ -12,41 +12,43 @@
 
 .grid {
   display: grid;
-  grid-template-columns: auto auto auto;
 }
 
-.editDelete {
-  /* border: 1px solid blue; */
-  margin-top: 30px;
-  margin-bottom: 8px;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  font-size: 18px;
-
+.seeEditDelete {
+  display: grid;
+  height: 40%;
+  margin-top: 78%;
+  align-items:center;
 }
+
 
 .rightBtnborder {
   border-style: none;
   font-size: 18px;
 }
 
-.oneHouse {
+.oneHouse-container {
   border: 1px solid;
-  width: 280px;
-  height: 500px;
+  width: 580px;
+  height: 280px;
+  margin-bottom: 20px;
+}
+
+.oneHouse {
+  /* border: 1px solid; */
+  width: 500px;
+  height: 250px;
+  display: grid;
+  grid-template-columns: 260px 200px 100px ;
   /* margin-right: 4%; */
   /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
 }
 
-
 .top {
-  margin-left: 30px;
-  margin-top: 30px;
-}
-
-.home-status {
-  padding-bottom: 28px;
+  padding-top: 8%;
+  padding-left: 8%;
+  height: 230px;
+  width: 225px;
 }
 
 .mainPhoto {
@@ -58,7 +60,8 @@
 .home-status {
   text-align: center;
   font-size: 20px;
-  margin-bottom: 4px;
+  margin-top: 5%;
+  margin-bottom: 10%;;
 }
 
 #status-t, #status-f {
@@ -68,20 +71,21 @@
 #createBtn {
   /* border: 2px solid blue; */
   width: 70px;
-  margin-left: 40%;
-  margin-top: 75%;
+  margin-left: 43%;
+  margin-top: 18%;
 }
 
 
 
 .create {
-  width: 280px;
-  height: 500px;
+  width: 580px;
+  height: 280px;
+  border: 1px grey dashed;
 }
 
 .postingTime {
   font-size: 12px;
-  padding: 5%;
+  text-align: center;
 }
 
 .summary {
@@ -104,17 +108,15 @@
   border: 1px solid #2E8B56;
   /* color: #2E8B56; */
   color: white;
-  width: 60px;
-  height: 23px;
+  width: 103px;
+  height: 28px;
   border-radius: 45px;
   padding-top: 2%;
   padding-bottom: 2%;
   padding-left: 6%;
   padding-right: 6%;
-  font-size: 14px;
+  font-size: 16px;
   /* margin-top: 2%; */
-  margin-left: 5px;
-  margin-right: 5px;
 }
 
 .rightBtnborder:hover {
@@ -126,16 +128,15 @@
   background-color: #2E8B56;
   /* background-color: #64A466; */
   border: 1px solid #2E8B56;
-  height: 21px;
+  height: 25px;
   /* color: #2E8B56; */
   color: white;
-  width: 8%;
+  width: 90px;
   border-radius: 45px;
   padding-left: 6%;
   padding-right: 6%;
-  font-size: 14px;
-  margin-left: 5px;
-  margin-right: 5px;
+  font-size: 17px;
+  text-align: center;
 }
 
 .linkFont {
