--- a/src/CreateContainer/Create.css
+++ b/src/CreateContainer/Create.css
@@ -128,3 +128,7 @@ input[type=file]::-webkit-file-upload-button {
   margin-top: 3%;
   /* border: 1px solid blue; */
 }
+
+.hide {
+  display: none;
+}
