--- a/src/App.css
+++ b/src/App.css
@@ -1,45 +1,48 @@
-/* .App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
-
-
-* {
-  font-family: 'Lato', sans-serif;
-}
-
-
-::placeholder {
-  /* color: #2E8B56; */
+/* ::placeholder {
+  color: #2E8B56;
   font-size: 13px;
   align-items: center;
+} */
+
+/* .mainContainer {
+  width: 516px;
+} */
+
+/* input */
+
+.form_input {
+  background: #EEEEEE;
+  padding: 8px 16px 6px 16px;
+  border: none;
+  height: 46px;
+  /* width: auto; */
+  font-size: 16px;
+}
+
+
+/* btn */
+.submitBtn {
+  margin-bottom: 127px;
+  font-size: 18px;
+  font-weight: 900;
+  /* color: #FFFFFF; */
+  padding: 16px 15px;
+  /* background-color: #36C255; */
+  width: 176px;
+  height: 70px;
+}
+
+/* preview frames */
+.hide {
+  display: none;
+}
+
+.frames {
+  border: 1px dashed grey;
+  /* background-image: url(./picture.png); */
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 40%;
+  height: 200px;
+  width: 454px;
 }
