--- a/src/CreateContainer/Create.css
+++ b/src/CreateContainer/Create.css
@@ -1,5 +1,5 @@
-* {
-  /* color: #2E8B56; */
+/* * {
+  color: #2E8B56;
 }
 
 .createForm {
@@ -13,12 +13,12 @@
   font-size: 20px;
   outline: none;
   width: 58%;
-  /* border: 1px solid #2E8B56;
-  color: #2E8B56; */
+  border: 1px solid #2E8B56;
+  color: #2E8B56;
   border: 1px solid grey;
   color: grey;
   display: grid;
-  /* grid-template-columns: auto; */
+  grid-template-columns: auto;
   border-radius: 5px;
 }
 
@@ -31,7 +31,7 @@ input[type=file] {
   width: 180px;
   height: 34px;
   overflow: hidden;
-  /* border-radius: 2%; */
+  border-radius: 2%;
 }
 
 input[type=file]:before {
@@ -42,26 +42,26 @@ input[type=file]:before {
   content: 'Select your photos';
   display: inline-block;
   background: white;
-  /* border: 1px solid #2E8B56;
-  color: #2E8B56; */
+  border: 1px solid #2E8B56;
+  color: #2E8B56;
   border: 1px solid grey;
   color: grey;
   padding: 0 10px;
   text-align: center;
   font-family: Helvetica, Arial, sans-serif;
-  /* border-radius: 20%; */
+  border-radius: 20%;
 
 }
 
 input[type=file]::-webkit-file-upload-button {
   visibility: hidden;
-  /* border-radius: 70%; */
+  border-radius: 70%;
 }
 
 .container-form-group {
   margin-top: 8%;
   margin-left: 28%;
-  /* border: 1px solid red; */
+  border: 1px solid red;
 }
 
 .frames {
@@ -120,15 +120,15 @@ input[type=file]::-webkit-file-upload-button {
 .container-submitBtn {
   margin-top: 4%;
   margin-left: 42%;
-  /* border: 6px solid grey; */
+  border: 6px solid grey;
 
 }
 
 .container-panel {
   margin-top: 3%;
-  /* border: 1px solid blue; */
+  border: 1px solid blue;
 }
 
 .hide {
   display: none;
-}
+} */
