--- a/src/RegisterLoginContainer/RegisterLoginContainer.css
+++ b/src/RegisterLoginContainer/RegisterLoginContainer.css
@@ -2,97 +2,54 @@
   font-family: 'Muli', sans-serif;
 }
 
-.regLog_container {
-  display: flex;
-  justify-content: center;
-  margin-top: 145px;
-}
+@media screen and (max-width: 375px){
+  .logo {
+    margin-top: 100px;
+    margin-left: 28px;
+    border: 1px solid;
+    width: 50px;
+    height: 59.56px;
+  }
+  .regLog_container {
+    border: yellow 2px solid;
+    width: 375px;
+    height: 812px;
+  }
 
-.regLog_row {
-  text-align: center;
-}
-
-.regLog_sub_container {
-  width: 516px;
-
-}
-
-.title_container, .notifications_container {
-  text-align: left;
-}
-
-.logo {
-  height: 146px;
-  width: 146px;
-}
-
-.title {
-  font-size: 48px;
-  margin-top: 32px;
-}
-
-.subtitle {
-  font-size: 28px;
-  margin-top: 38px;
-}
-
-.form_container {
-  display: flex;
-  flex-direction: column;
-  color: #868686;
-  margin-top: 58px;
-}
-
-/* .form_input {
-  background: #EEEEEE;
-  padding: 8px 16px 6px 16px;
-  margin-bottom: 24px;
-  border: none;
-  height: 46px;
-  font-size: 16px;
-} */
-
-.btn_container {
-  display: flex;
-  justify-content: space-between;
-}
-
-.btn_item {
-  font-size: 14px;
-  border: none;
-}
-
-.regLog_Container {
-   display: flex;
-   justify-content: center;
-}
-
-.notifications_container {
-  display: flex;
-  flex-direction: column;
-  text-align: left;
-}
-
-.notifications_checkbox {
-  margin-right: 18px;
-}
-
-.regLogBtn {
-  margin-bottom: 127px;
-  font-size: 18px;
-  font-weight: 900;
-  color: #FFFFFF;
-  padding: 16px 15px;
-  background-color: #36C255;
-  width: 176px;
-  height: 70px;
-}
-
-.logBtn {
-    margin-top: 262px;
-
-}
-
-.regBtn {
-   margin-top: 108px;
+  .title_container {
+    font-size: 36px;
+    margin-top: 20.44px;
+    margin-left: 20px;
+  }
+  .form_container {
+    margin-top: 41px;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+  .form_input {
+    width: 335px;
+    height: 40px;
+  }
+  .btn_item {
+    border-style: none;
+    background-color: none;
+    margin-top: 29px;
+    margin-bottom: 29px;
+  }
+  .regLogBtn {
+    width: 335px;
+    height: 40px;
+  }
+  .password {
+    margin-top: 25px;
+  }
+  #email, #password {
+    margin-top: 10px;
+  }
+  .signup {
+    width: 375px;
+    height: 37px;
+    border: 1px solid;
+    margin-top: 134px;
+  }
 }
