--- a/src/Nav/Nav.css
+++ b/src/Nav/Nav.css
@@ -1,119 +1,4 @@
-.nav {
-  font-size: 20px;
-  color: white;
-  margin-top: 0px;;
-  padding-top: 1%;
-  padding-bottom: 1%;
-  padding-right: 5%;
+.container_nav {
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
-  /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
-}
-
-
-
-
-.true {
-  background-color: #2E8B56;
-}
-
-.false {
-  /* -webkit-background-size: cover;
- -moz-background-size: cover;
- -o-background-size: cover;
- background-size: cover; */
- background-color: #2E8B56;
-}
-
-.nav-item {
-  /* padding: 4px; */
-  color: white;
-  margin-right: 40px;
-  border-style: none;
-  /* border: 1px solid; */
-  padding: 4px;
-}
-
-
-.logout {
-  background-color: #2E8B56;
-  border: none;
-  color: white;
-  font-size: 20px;
-}
-
-.navItem {
-  color: white;
-}
-
-.message {
-  font-size: 30px;
-}
-
-.mainPhoto1 {
-  width: 100%;
-}
-
-.footer {
-  background-color: #2E8B56;
-  height: 30px;
-  position: fixed;
-
-}
-
-
-@media only screen and (max-width: 600px) {
-  .nav {
-    font-size: 20px;
-    color: white;
-    margin-top: 0px;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    padding-left: 50px;
-  }
-
-  .true {
-    background-color: #2E8B56;
-  }
-
-  .false {
-    /* -webkit-background-size: cover;
-   -moz-background-size: cover;
-   -o-background-size: cover;
-   background-size: cover; */
-   background-color: #2E8B56;
-  }
-
-  .nav-item {
-    /* padding: 4px; */
-    color: white;
-    /* margin-right: 40px; */
-    /* border-style: none; */
-    /* border: 1px solid; */
-    /* padding: 4px; */
-  }
-
-
-  .logout {
-    background-color: #2E8B56;
-    border: none;
-    color: white;
-    font-size: 20px;
-  }
-
-  .navItem {
-    color: white;
-  }
-
-  .message {
-    font-size: 30px;
-  }
-
-  .mainPhoto1 {
-    width: 100%;
-  }
-
-
 }
