--- a/src/MainContainer/Main.scss
+++ b/src/MainContainer/Main.scss
@@ -2,7 +2,5 @@
   height: 40px;
   background-color: #007AFF;
   text-align: center;
-  font-size: 16px;
-  color: white;
-  font-weight: normal;
+  justify-content: center;
 }
