--- a/src/MainContainer/Main.scss
+++ b/src/MainContainer/Main.scss
@@ -1,6 +1,52 @@
 .readfirst {
   height: 40px;
   background-color: #007AFF;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
+  text-align: center;
+  #link {
+    text-decoration: none;
+    color: white; 
+  }
+}
+
+.session_container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 90%;
+  margin-top: 5%;
+  margin-left: 5%;
+  .col_two {
+    margin-top: 7%;
+  }
+  #h1 {
+    font-size: 36px;
+    margin-left: 2%;
+    margin-right: 2%;
+    // margin-bottom: 4%;
+    text-align: center;
+  }
+  #text {
+    font-size: 16px;
+    padding: 7%;
+
+  }
+  #btn {
+    width: 60%;
+    margin-left: 20%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    border-radius: 5px;
+    background: #139929;
+    text-align: center;
+
+  }
+  .linkBtn {
+    color: white;
+    text-decoration: none;
+    font-weight: 900;
+    font-size: 18px;
+  }
 }
