--- a/src/RegisterLoginContainer/RegisterLoginContainer.scss
+++ b/src/RegisterLoginContainer/RegisterLoginContainer.scss
@@ -1,3 +1,20 @@
+.container_nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  #login {
+    margin-right: 10%
+  }
+  #logbtn {
+    border: none;
+    background-color: #E5E5E5;
+    color: #979797;
+    font-size: 16px;
+    line-height: 20px;
+  }
+}
+
+
 .container_regLog {
   display: flex;
   flex-direction: row;
@@ -7,22 +24,31 @@
 .container_loginbox {
   display: flex;
   flex-direction: column;
+  position: relative;
   align-items: center;
   padding-top: 40px;
-  border: 1px solid;
+  border: 1px;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
   width: 570px;
   height: 410px;
   margin-top: 139px;
+  padding-bottom: 0;
   align-self: center;
   .label_input {
     display: flex;
     flex-direction: column;
+    .label {
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
   }
   .form_input {
     height: 50px;
     width: 490px;
     font-size: 14px;
+    border-radius: 5px;
+    border: 1px solid #979797;
   }
   .btn_item {
     border-style: none;
@@ -34,13 +60,19 @@
     color: #FFFFFF;
     font-weight: 900;
     font-size: 18px;
+    border-radius: 5px;
   }
   .signup {
     background-color: #E9E9E9;
-    text-align: center;
     width: 100%;
     height: 40px;
     font-size: 16px;
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 0 0 10px 10px;
   }
 }
 
@@ -49,4 +81,35 @@
   background: none;
   color: #007AFF;
   font-size: 16px;
+}
+
+
+.container_regbox {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid red;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  .label_input {
+    display: flex;
+    flex-direction: column;
+    .label {
+      font-weight: bold;
+      margin-bottom: 10px;
+      font-size: 14px;
+      line-height: 18px;
+    }
+  }
+  .form_input {
+    height: 50px;
+    width: 490px;
+    font-size: 14px;
+    border-radius: 5px;
+    border: 1px solid #979797;
+    margin-bottom: 20px;
+  }
+  .notifications_container {
+    display: flex;
+    flex-direction: column;
+  }
 }
