--- a/src/MyCasaComponents/MyCasaContainer/MyCasaContainer.scss
+++ b/src/MyCasaComponents/MyCasaContainer/MyCasaContainer.scss
@@ -10,7 +10,7 @@
 }
 .create_container {
   width: 70%;
-  margin-left: 20%;
+  margin-left: 15%;
   .create_row {
     display: flex;
     flex-direction: row;
@@ -29,10 +29,6 @@
      .link {
       width: 80%;
       height: 160px;
-      .img {
-        width: 100%;
-        height: 160px;
-      }
     }
     .tag {
       margin-top: 2%;
@@ -40,6 +36,10 @@
   }
 }
 
+.img {
+  width: 200px;
+  height: 160px;
+}
 .noposting {
   width: 200px;
   height: 160px;
