--- a/src/MyAccountComponents/MyAccountContainer/MyAccount.scss
+++ b/src/MyAccountComponents/MyAccountContainer/MyAccount.scss
@@ -1,3 +1,34 @@
+.account_container {
+  width: 80%;
+  margin-left: 10%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  .account_title {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 28px;
+    line-height: 35px;
+    margin-left: 5%;
+    margin-bottom: 22px;
+    margin-top: 4%;
+  }
+  .row_account {
+    display: flex;
+    flex-direction: row;
+    width: 90%;
+    margin-left: 5%; 
+
+    .col_one_account, .col_two_account {
+      margin-right: 10%;
+    }
+  }
+
+}
+
+
+
 @media only screen and (max-width: 600px) {
 
 }
